--- a/source/Appccelerate.StateMachine.Specs/Appccelerate.StateMachine.Specs.csproj
+++ b/source/Appccelerate.StateMachine.Specs/Appccelerate.StateMachine.Specs.csproj
@@ -11,7 +11,7 @@
     <AssemblyName>Appccelerate.StateMachine.Specs</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <NuGetPackageImportStamp>08c37489</NuGetPackageImportStamp>
+    <NuGetPackageImportStamp>46be2b5c</NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -62,26 +62,37 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
+    <Reference Include="Xbehave">
+      <HintPath>..\packages\Xbehave.1.1.0\lib\net45\Xbehave.dll</HintPath>
+    </Reference>
+    <Reference Include="xunit">
+      <HintPath>..\packages\xunit.1.9.2\lib\net20\xunit.dll</HintPath>
+    </Reference>
+    <Reference Include="xunit.extensions">
+      <HintPath>..\packages\xunit.extensions.1.9.2\lib\net20\xunit.extensions.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ActiveStateMachineSpecifications.cs" />
+    <Compile Include="ActiveStateMachines.cs" />
+    <Compile Include="Catch.cs" />
     <Compile Include="Concern.cs" />
     <Compile Include="CurrentStateExtension.cs" />
-    <Compile Include="CustomTypesSpecifications.cs" />
-    <Compile Include="EntryExitActionSpecification.cs" />
-    <Compile Include="ExceptionHandlingSpecification.cs" />
-    <Compile Include="ExtensionSpecifications.cs" />
-    <Compile Include="GuardSpecification.cs" />
-    <Compile Include="HierarchicalStateMachineInitializationSpecification.cs" />
-    <Compile Include="HierarchicalTransitionSpecification.cs" />
-    <Compile Include="InitializationSpecification.cs" />
-    <Compile Include="PassiveStateMachineSpecifications.cs" />
-    <Compile Include="PersistenceSpecification.cs" />
+    <Compile Include="CustomTypes.cs" />
+    <Compile Include="EntryActions.cs" />
+    <Compile Include="ExceptionHandling.cs" />
+    <Compile Include="ExitActions.cs" />
+    <Compile Include="StateMachineExtensions.cs" />
+    <Compile Include="Guards.cs" />
+    <Compile Include="HierarchicalStateMachineInitialization.cs" />
+    <Compile Include="HierarchicalTransitions.cs" />
+    <Compile Include="Initialization.cs" />
+    <Compile Include="PassiveStateMachines.cs" />
+    <Compile Include="Persisting.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\GlobalAssemblyInfo.cs" />
     <Compile Include="RecordEventsExtension.cs" />
-    <Compile Include="ReportSpecifications.cs" />
-    <Compile Include="StartStopSpecification.cs" />
+    <Compile Include="Reporting.cs" />
+    <Compile Include="StartStop.cs" />
     <Compile Include="StateMachineNameReporter.cs" />
     <Compile Include="TransitionSpecification.cs" />
   </ItemGroup>
@@ -113,10 +124,12 @@
     <Error Condition="!Exists('..\packages\Appccelerate.VersionTask.1.9.0\build\Appccelerate.VersionTask.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Appccelerate.VersionTask.1.9.0\build\Appccelerate.VersionTask.targets'))" />
     <Error Condition="!Exists('..\packages\Appccelerate.CheckHintPathTask.1.8.0\build\Appccelerate.CheckHintPathTask.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Appccelerate.CheckHintPathTask.1.8.0\build\Appccelerate.CheckHintPathTask.targets'))" />
     <Error Condition="!Exists('..\packages\Appccelerate.Development.Specs.1.5.0\build\Appccelerate.Development.Specs.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Appccelerate.Development.Specs.1.5.0\build\Appccelerate.Development.Specs.targets'))" />
+    <Error Condition="!Exists('..\packages\xunit.MSBuild.1.9.2.3\build\xunit.MSBuild.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\xunit.MSBuild.1.9.2.3\build\xunit.MSBuild.targets'))" />
   </Target>
   <Import Project="..\packages\StyleCop.MSBuild.4.7.49.0\build\StyleCop.MSBuild.Targets" Condition="Exists('..\packages\StyleCop.MSBuild.4.7.49.0\build\StyleCop.MSBuild.Targets')" />
   <Import Project="..\packages\Appccelerate.Development.1.5.0\build\Appccelerate.development.targets" Condition="Exists('..\packages\Appccelerate.Development.1.5.0\build\Appccelerate.development.targets')" />
   <Import Project="..\packages\Appccelerate.VersionTask.1.9.0\build\Appccelerate.VersionTask.targets" Condition="Exists('..\packages\Appccelerate.VersionTask.1.9.0\build\Appccelerate.VersionTask.targets')" />
   <Import Project="..\packages\Appccelerate.CheckHintPathTask.1.8.0\build\Appccelerate.CheckHintPathTask.targets" Condition="Exists('..\packages\Appccelerate.CheckHintPathTask.1.8.0\build\Appccelerate.CheckHintPathTask.targets')" />
   <Import Project="..\packages\Appccelerate.Development.Specs.1.5.0\build\Appccelerate.Development.Specs.targets" Condition="Exists('..\packages\Appccelerate.Development.Specs.1.5.0\build\Appccelerate.Development.Specs.targets')" />
+  <Import Project="..\packages\xunit.MSBuild.1.9.2.3\build\xunit.MSBuild.targets" Condition="Exists('..\packages\xunit.MSBuild.1.9.2.3\build\xunit.MSBuild.targets')" />
 </Project>
