--- a/source/Appccelerate.StateMachine.Specs/packages.config
+++ b/source/Appccelerate.StateMachine.Specs/packages.config
@@ -9,4 +9,8 @@
   <package id="FluentAssertions" version="3.2.1" targetFramework="net45" />
   <package id="Machine.Specifications" version="0.8.3" targetFramework="net45" />
   <package id="StyleCop.MSBuild" version="4.7.49.0" targetFramework="net45" developmentDependency="true" />
+  <package id="Xbehave" version="1.1.0" targetFramework="net45" />
+  <package id="xunit" version="1.9.2" targetFramework="net45" />
+  <package id="xunit.extensions" version="1.9.2" targetFramework="net45" />
+  <package id="xunit.MSBuild" version="1.9.2.3" targetFramework="net45" developmentDependency="true" />
 </packages>
