--- a/source/Appccelerate.StateMachine/appccelerate.statemachine.nuspec
+++ b/source/Appccelerate.StateMachine/appccelerate.statemachine.nuspec
@@ -25,17 +25,17 @@
     <copyright>Copyright 2012-2014</copyright>
     <tags>Appccelerate state-machine</tags>
     <frameworkAssemblies>
-      <frameworkAssembly assemblyName="System" targetFramework="portable-windows8+net45" />
-      <frameworkAssembly assemblyName="System.Core" targetFramework="portable-windows8+net45" />
+      <frameworkAssembly assemblyName="System" targetFramework="portable-windows8+net45+wp80" />
+      <frameworkAssembly assemblyName="System.Core" targetFramework="portable-windows8+net45+wp80" />
     </frameworkAssemblies>
     <dependencies>
       <dependency id="Appccelerate.Fundamentals" version="[2.13,3.0)" />
     </dependencies>	
   </metadata>
   <files>
-    <file src="bin\Release\Appccelerate.StateMachine.dll" target="lib\portable-windows8+net45" />
-    <file src="bin\Release\Appccelerate.StateMachine.pdb" target="lib\portable-windows8+net45" />
-    <file src="bin\Release\Appccelerate.StateMachine.xml" target="lib\portable-windows8+net45" />
+    <file src="bin\Release\Appccelerate.StateMachine.dll" target="lib\portable-windows8+net45+wp80" />
+    <file src="bin\Release\Appccelerate.StateMachine.pdb" target="lib\portable-windows8+net45+wp80" />
+    <file src="bin\Release\Appccelerate.StateMachine.xml" target="lib\portable-windows8+net45+wp80" />
     <file src="**\*.cs" target="src" />
   </files>  
 </package>
